--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,39 @@ body {
   width: 100%;
   padding: 8rem 10px 4rem;
 }
+
+.about__content {
+  padding: 8rem 40px;
+  display: flex;
+}
+
+.about__list {
+  list-style: none;
+  flex: 2;
+  margin-right: 15px;
+}
+
+.about__list a {
+  color: #9f9f9f;
+  text-transform: capitalize;
+  padding: 20px 0;
+  font-weight: 600;
+}
+
+.about__list a:hover {
+  color: #000;
+}
+
+.main__content {
+  flex: 7;
+}
+
+.main__content h1 {
+  margin-bottom: 15px;
+  line-height: 30px;
+  font-size: 30px;
+}
+
+.main__content p {
+  line-height: 25px;
+}
